Fixed a double border issue in context toolbars TINY-4652

--- a/modules/oxide/src/less/theme/components/form/textfield.less
+++ b/modules/oxide/src/less/theme/components/form/textfield.less
@@ -46,7 +46,7 @@
     font-size: @textfield-font-size;
     line-height: @textfield-line-height;
     margin: 0;
-    min-height: @textfield-height;
+    min-height: (@textfield-height - (@textfield-border-width * 2  ));
     outline: @textfield-outline;
     padding: @textfield-pad-y @textfield-pad-x;
     resize: none;
